--- a/scss/_prism.scss
+++ b/scss/_prism.scss
@@ -44,7 +44,7 @@ code[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: #1e4593;
+	color: #2759bd;
 }
 
 .token.punctuation {
