--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,61 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Josh Fry is a front end web developer currently working at @montereyaq." />	
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
 
-	<title>{% if page.title %} {{ page.title }} | {% endif %} joshfry.me</title>
-	
-	<script type="text/javascript" src="//use.typekit.net/avi1aky.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	
-	<link rel="stylesheet" href="/css/style.css" />
+  <title>{% if page.title %} {{ page.title }} | {% endif %} joshfry.me</title>
+  <meta name="description" content="Josh Fry is a front end web developer currently working at @montereyaq." />
+
+  <script type="text/javascript" src="//use.typekit.net/bki8kjv.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+  <link rel="stylesheet" href="/css/style.css" />
+
+  <script src="/js/plugins/modernizr.min.js"></script>
 </head>
-<body>
+<body class="nav {{ page.title }}">
 
-	<header class="site-header" role="banner">
-		<div class="container">
-			
-			<a class="logo" href="/"><img src="/img/josh-avatar.png" width="65" height="65" alt="joshfry.me"/> Josh Fry</a>
-		
-		</div>
-	</header>
+<header class="site-header">
+  <div class="logo-box">
+    <a href="/" style="display: block">
+      <div class="site-avatar"><img src="/img/josh-avatar.png" alt="Josh Fry avatar"></div>
+      <h1 class="site-title"><a href="/">Josh Fry</a></h1>
+      <h2 class="site-subtitle">Front End Developer &amp; Designer</h2>
+    </a>
+  </div>
+  <nav class="site-nav">
+    <a href="/" class="home"><i class="icon-home"></i>Home</a>
+    <a href="/portfolio" class="portfolio"><i class="icon-eye"></i>Portfolio</a>
+    <a href="/about" class="about"><i class="icon-user_male"></i>About</a>
+    <a href="/archives" class="archives"><i class="icon-newspaper"></i>Archives</a>
+  </nav>
+</header>
 
-	<div class="main" role="main">
-		<div class="container">
-		
-			{{ content }}
+<main class="site-main"> <!-- add class .art-direction -->
 
-		</div>
-	</div>
+  <!-- TODO: Create a hero unit -->
+  <!-- <div class="hero-unit">
+    <img src="http://placehold.it/2000x500" alt="">
+  </div> -->
 
-	<footer class="site-footer" role="contentinfo">
-		<div class="container">
+    {{ content }}
 
-			<div class="social">
-				<nav><a href="http://twitter.com/joshfry" class="twitter" data-icon="&#x61;" target="_blank"><span>Twitter</span></a><a href="http://github.com/joshfry" class="github" data-icon="&#x62;" target="_blank"><span>GitHub</span></a><a href="http://codepen.io/joshfry" class="codepen" data-icon="&#x63;" target="_blank"><span>Codepen</span></a><a href="http://forrst.me/joshfry/posts" class="forrst" data-icon="&#x64;" target="_blank"><span>Forrst</span></a><a href="http://zootool.com/user/joshfry/" class="zootool" data-icon="&#x65;" target="_blank"><span>Zoo Tool</span></a></nav>
-			</div>
-			
-			<a class="copyright" href="http://twitter.com/@joshfry">@joshfry</a>
+</main>
 
-		</div>
-	</footer>
+<footer class="site-footer">
+  <div class="container">
+      <p class="sosumi">Made by <a href="http://twitter.com/joshfry" target="_blank">Josh Fry</a></p>
+      <div class="social">
+        <nav>
+          <a href="http://github.com/joshfry" class="github" target="_blank">
+            <i class="social-icon-github"></i>
+            <span>GitHub</span></a>
+          <a href="http://codepen.io/joshfry" class="codepen" target="_blank">
+            <i class="social-icon-codepen"></i>
+            <span>Codepen</span></a>
+          <a href="http://twitter.com/joshfry" class="twitter" target="_blank">
+            <i class="social-icon-twitter"></i>
+            <span>Twitter</span></a>
+        </nav>
+      </div>
+  </div><!-- / container -->
+</footer>
 
-	<script type="text/javascript" src="/js/app.js"></script>
+<!-- <script src="/components/jquery/jquery.min.js"></script> -->
+<script src="/js/site.min.js"></script>
 
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-30007230-1']);
-		_gaq.push(['_setDomainName', 'joshfry.me']);
-		_gaq.push(['_trackPageview']);
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30007230-1']);
+  _gaq.push(['_setDomainName', 'joshfry.me']);
+  _gaq.push(['_trackPageview']);
 
-		(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
-	
+  (function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
 </body>
 </html>
