--- a/_layouts/portfolio_entry.html
+++ b/_layouts/portfolio_entry.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
- 
-<!-- <img src="{{ page.image }}" /> -->
-<h1 class="content">{{page.title}}</h1>
- 
-{{ content }}
+
+<div class="container-wide">
+  <!-- <p class="article-date">{{ page.date | date: "%B %d, %Y" }}</p> -->
+  <h1 class="article-title">{{page.title}}</h1>
+  <img src="{{ page.image }}" />
+  {{ content }}
+</div>
