--- a/scss/_author.scss
+++ b/scss/_author.scss
@@ -592,21 +592,21 @@ body.nav.archives .home {
     @include span-columns(6);
     @include omega(2n);
   }
-  @include breakpoint(768px)  {
-    // @include omega-reset(2n);
-    // @include span-columns(4);
-    // @include omega(3n);
-  }
-  @include breakpoint(1024px) {
-    @include omega-reset(3n);
-    @include span-columns(6);
-    @include omega(2n);
-  }
-  @include breakpoint(1280px) {
-    @include omega-reset(2n);
-    @include span-columns(4);
-    @include omega(3n);
-  }
+  // @include breakpoint(768px)  {
+  //   @include omega-reset(2n);
+  //   @include span-columns(4);
+  //   @include omega(3n);
+  // }
+  // @include breakpoint(1024px) {
+  //   @include omega-reset(3n);
+  //   @include span-columns(6);
+  //   @include omega(2n);
+  // }
+  // @include breakpoint(1280px) {
+  //   @include omega-reset(2n);
+  //   @include span-columns(4);
+  //   @include omega(3n);
+  // }
 
   img {
     display: block;
