--- a/src/assemble/posts/2013-12-06-sass-media-query-helper-for-designers.hbs
+++ b/src/assemble/posts/2013-12-06-sass-media-query-helper-for-designers.hbs
@@ -1,6 +1,6 @@
 ---
 date: 2013-12-06
-title: sass Media Query Helper For Designers
+title: sass media query helper for designers
 description: A configurable design tool that displays the current min-width media query in the bottom right corner of your screen and updates as you re-size the browser window.
 category: notes
 tags: rwd, scss, media queries, tools
