--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,8 +43,8 @@
 @import "components/buttons";
 
 // Vendor
-@import "vendor/icomoon";
-@import "vendor/prism";
+@import "libs/icomoon";
+@import "libs/prism";
 
 // Site
 @import "site/author";
