--- a/src/assemble/posts/2013-03-15-ios7-orientation-zoom-bug-fix.hbs
+++ b/src/assemble/posts/2013-03-15-ios7-orientation-zoom-bug-fix.hbs
@@ -1,6 +1,6 @@
 ---
 date: 2013-03-15
-title: iOS7 orientation zoom bug fix
+title: ios7 orientation zoom bug fix
 description: Need I say more?
 category: notes
 tags: dev
