updated omega reset article with updated syntax

--- a/src/assemble/pages/about.hbs
+++ b/src/assemble/pages/about.hbs
@@ -1,19 +1,24 @@
 ---
 title: about
-pageTitle: Hello!
+pageTitle: Yo yo yo,
 ---
 
 {{#markdown}}
 
-<p class="intro">I am a front-end web developer and designer working at the [Monterey Bay Aquarium](http://montereybayaquarium.org).</p>
+<p class="intro">I am currently a web developer at Bay Photo Lab.</p>
 
-## Currently excited about:
+### Excited about:
 
-- Front-end tools
-- Gruntjs
-- Assemble.io
+- Object Oriented Programming
+- Javascript
+- Middleman
 - Sass
 - Ruby
 - Rails
+- Grunt
+
+### Wishing I:
+
+- Had more time to write about stuff
 
 {{/markdown}}
