--- a/src/assemble/pages/about.hbs
+++ b/src/assemble/pages/about.hbs
@@ -1,24 +1,16 @@
 ---
 title: about
-pageTitle: Yo yo yo,
+pageTitle: Hey hey hey,
 ---
 
 {{#markdown}}
 
 <p class="intro">I am currently a web developer at Bay Photo Lab.</p>
 
-### Excited about:
+I use [Assemble](http://assemble.io) to statically generate my website and [Middleman](http://middlemanapp.com) for everything else. I make [boilerplates](https://github.com/joshfry?tab=repositories) for everything because I hate wasting time setting up new projects. I don't think the word "pretty" should be used to describe design.
 
-- Object Oriented Programming
-- Javascript
-- Middleman
-- Sass
-- Ruby
-- Rails
-- Grunt
+**I'm currently excited about** object oriented programming, JavaScript, Middleman, Sass, Ruby, Rails, Grunt, static site generators.
 
-### Wishing I:
-
-- Had more time to write about stuff
+**I really wish** I had more time to write about stuff.
 
 {{/markdown}}
