--- a/src/assemble/partials/footer.hbs
+++ b/src/assemble/partials/footer.hbs
@@ -2,14 +2,17 @@
 
 <div class="social">
   <nav>
+    <a href="http://twitter.com/joshfry" class="twitter" target="_blank">
+      <i class="icon-twitter"></i>
+      <span>Twitter</span></a>
     <a href="http://github.com/joshfry" class="github" target="_blank">
       <i class="social-icon-github"></i>
       <span>GitHub</span></a>
     <a href="http://codepen.io/joshfry" class="codepen" target="_blank">
       <i class="social-icon-codepen"></i>
       <span>Codepen</span></a>
-    <a href="http://twitter.com/joshfry" class="twitter" target="_blank">
-      <i class="social-icon-twitter"></i>
-      <span>Twitter</span></a>
+    <a href="https://dribbble.com/joshfry" class="dribbble" target="_blank">
+      <i class="icon-dribbble"></i>
+      <span>Dribbble</span></a>
   </nav>
 </div>
