--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -32,6 +32,7 @@ a {
   color: $base-link-color;
   text-decoration: none;
   outline: 0;
+  font-weight: bold;
 
   &:hover {
     color: $hover-link-color;
