--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -71,7 +71,7 @@ $base-accent-color: $primary;
 $header-font-color: #333;
 
 // Text Link Colors
-$base-link-color: $base-accent-color;
+$base-link-color: #2379cf;
 $hover-link-color: $secondary;
 
 // Border color
