--- a/src/assemble/pages/work.hbs
+++ b/src/assemble/pages/work.hbs
@@ -1,13 +1,20 @@
 ---
-title: portfolio
+title: work
 ---
-
-<h3>I need to update this page :)</h3>
 
 <div class="portfolio">
 
   <figure class="item">
-    <a href="http://montereybayaquarium.org" target="_blank">
+    <a href="http://www.sandiegocoffee.com">
+      <img src="{{assets}}/img/portfolio/sd_coffee-thumb.jpg" alt="San Diego Coffee Co">
+      <figcaption class="details">
+        <h2 class="title">San Diego Coffee Co</h2>
+      </figcaption>
+    </a>
+  </figure>
+
+  <figure class="item">
+    <a href="http://montereybayaquarium.org">
       <img src="{{assets}}/img/portfolio/mba-thumb.png" alt="Monterey Bay Aquarium Website">
       <figcaption class="details">
         <h2 class="title">Monterey Bay Aquarium Website</h2>
@@ -16,7 +23,7 @@ title: portfolio
   </figure>
 
   <figure class="item">
-    <a href="http://mobile.seafoodwatch.org" target="_blank">
+    <a href="http://mobile.seafoodwatch.org">
       <img src="{{assets}}/img/portfolio/seafood_watch-thumb.png" alt="Seafood Watch Mobile">
       <figcaption class="details">
         <h2 class="title">Seafood Watch Mobile</h2>
@@ -25,7 +32,7 @@ title: portfolio
   </figure>
 
   <figure class="item">
-    <a href="http://styleguide.joshfry.me" target="_blank">
+    <a href="http://styleguide.joshfry.me">
       <img src="{{assets}}/img/portfolio/styleguide-thumb.png" alt="MBA.Styleguide">
       <figcaption class="details">
         <h2 class="title">MBA.Styleguide</h2>
@@ -34,7 +41,7 @@ title: portfolio
   </figure>
 
   <figure class="item">
-    <a href="http://codepen.io/joshfry/pen/utHlL" target="_blank">
+    <a href="http://codepen.io/joshfry/pen/utHlL">
       <img src="{{assets}}/img/portfolio/css_piano-thumb.png" alt="Pure CSS Electrik Piano">
       <figcaption class="details">
         <h2 class="title">Pure CSS Electrik Piano</h2>
