--- a/src/assemble/pages/about.hbs
+++ b/src/assemble/pages/about.hbs
@@ -7,10 +7,21 @@ pageTitle: Hey hey hey,
 
 <p class="intro">I am currently a web developer at Bay Photo Lab.</p>
 
-I use [Assemble](http://assemble.io) to statically generate my website and [Middleman](http://middlemanapp.com) for everything else. I make [boilerplates](https://github.com/joshfry?tab=repositories) for everything because I hate wasting time setting up new projects. I don't think the word "pretty" should be used to describe design.
+I use [Assemble](http://assemble.io) to statically generate my website and [Middleman](http://middlemanapp.com) for everything else. I make [boilerplates](https://github.com/joshfry?tab=repositories) for everything because I hate wasting time setting up new projects.
 
-**I'm currently excited about** object oriented programming, JavaScript, Middleman, Sass, Ruby, Rails, Grunt, static site generators.
+#### I'm currently excited about...
 
-**I really wish** I had more time to write about stuff.
+- Object oriented programming
+- JavaScript
+- Middleman
+- Sass
+- Ruby
+- Rails
+- Grunt
+- static site generators.
+
+#### I really wish...
+
+- I had more time to write about stuff.
 
 {{/markdown}}
