--- a/src/assemble/pages/work.hbs
+++ b/src/assemble/pages/work.hbs
@@ -5,6 +5,15 @@ title: work
 <div class="portfolio">
 
   <figure class="item">
+    <a href="#">
+      <img src="{{assets}}/img/portfolio/bayphoto-thumb.jpg" alt="Bay Photo">
+      <figcaption class="details">
+        <h2 class="title">Bay Photo</h2>
+      </figcaption>
+    </a>
+  </figure>
+
+  <figure class="item">
     <a href="http://www.sandiegocoffee.com">
       <img src="{{assets}}/img/portfolio/sd_coffee-thumb.jpg" alt="San Diego Coffee Co">
       <figcaption class="details">
