ready to go live with middleman

--- a/source/pages/index.html.md.erb
+++ b/source/pages/index.html.md.erb
@@ -2,4 +2,4 @@
 title: home
 ---
 
-I just converted my site to [Middleman](http://middlemanapp.com) and I'm going to redesign my site in the open&mdash;so it might look weird right now.
+I just converted my site to [Middleman](http://middlemanapp.com) and I'm going to redesign it in the open&mdash;so it might look weird right now.
