--- a/source/assets/scss/variables/_variables.scss
+++ b/source/assets/scss/variables/_variables.scss
@@ -20,7 +20,7 @@ $serif: "ff-meta-serif-web-pro", $georgia; // 500, 700
 $base_font_family: $serif;
 
 // Headings
-$header_font_family: $sans_serif;
+$header_font_family: $serif;
 
 
 // Sizes
