--- a/source/pages/index.html.md.erb
+++ b/source/pages/index.html.md.erb
@@ -3,7 +3,7 @@ title: home
 pageable: true
 ---
 
-<ul class="archive_lidt">
+<ul class="archive_list">
   <% page_articles.each_with_index do |article, i| %>
   <li class="archive_post">
     <a href="<%= article.url %>">
