--- a/source/assets/scss/_author.scss
+++ b/source/assets/scss/_author.scss
@@ -2,46 +2,178 @@
 // Author
 // -------------------------------------------------------------------
 
+@mixin ul_reset {
+  margin: {
+    top: 0;
+    right: 0;
+    left: 0;
+  };
+  padding: 0;
+  list-style-type: none;
+}
+
 .container {
   @include outer-container;
   padding: 0 $base_line_height;
 }
 
-h1 ,h2,h3,
-h4,h5,h6,
-.h {
-  font-family: $header_font_family;
-  font-size: 1.5em;
-  line-height: 1;
+h1 ,h2,h3, h4,h5,h6 {
   margin-bottom: 0;
+  line-height: 1;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: em(32);
+  font-weight: 900;
+  margin-top: 0;
+
+  @include media(45em) {
+    font-size: em(56);
+  }
 }
 
 h2 {
-  font-family: $base_font_family;
-  font-size: 2em;
+  font-size: em(24);
+  font-weight: 700;
+  margin-top: em(40, 32);
+
+  @include media(45em) {
+    font-size: em(32);
+  }
 }
 
-.j {
-  font-size: em(30);
+h3, h4, h5 {
+  font-size: em(18);
+  font-weight: 700;
+  margin-top: em(40, 24);
+
+  @include media(45em) {
+    font-size: em(24);
+  }
+
+  & + p {
+    margin-top: em(5);
+  }
 }
 
-.h.light {
-  margin-top: 0;
-  font-size: em(20);
-  font-weight: 400;
+p, ul {
+  margin: em(40) 0;
 }
 
-a {
-  color: #2ecc71;
+p code {
+  background: $white;
+  border: 1px solid $gray;
+  padding: em(1) em(5);
 }
 
+.logo {
+  max-width: em(100);
+  margin: 0 auto;
+  padding: em(20) 0;
 
-p {
-  font-size: em(21);
-  line-height: em(30, 21);
-  margin-bottom: em(30, 21);
+  a {
+    display: block;
+    border-radius: 100%;
+
+    &:hover {
+      background: $white;
+    }
+  }
+}
+
+blockquote {
+  margin: em(30);
+  padding: em(10) em(20);
+  border-left: 10px solid $primary;
+
+  p {
+    margin: 0;
+    font-size: em(24);
+    color: $medium_gray;
+    line-height: 1.2;
+  }
+}
+
+.social {
+  @include clearfix;
+  margin-top: em(40);
+  padding-top: em(20);
+  border-top: 1px dashed $gray;
+
+  ul {
+    @include ul_reset;
+
+    li {
+      text-align: center;
+
+      @include span-columns(6);
+      @include omega(2n);
+
+      @include media(45em) {
+        @include omega-reset(2n);
+        @include span-columns(3);
+        @include omega(4n);
+      }
+
+      a {
+        display: block;
+        padding: em(20);
+        color: $black;
+
+        &:hover {
+          background: $white;
+        }
+
+        i {
+          font-size: 32px;
+          line-height: 1.25;
+        }
+
+        span {
+          position: relative;
+          top: -6px;
+          left: 6px;
+        }
+      }
+    }
+  }
+}
+
+.site-footer {
+  text-align: center;
+}
+
+.archive_list {
+  @include ul-reset;
+
+  .archive_post {
+
+    a {
+      display: block;
+      padding: em(20);
+      color: $black;
+
+      @include media(45em) {
+        padding: em(30);
+      }
+    }
+
+    time {
+      font-size: em(12);
+      color: $medium_gray;
+    }
+
+    h2 {
+      margin: 0;
+    }
+
+    p {
+      margin: 0;
+      margin-top: em(5);
+    }
+
+    &:hover {
+      background: $white;
+    }
+  }
 }
