testing auto deploying with netlify

--- a/source/_templates/layouts/layout.erb
+++ b/source/_templates/layouts/layout.erb
@@ -64,6 +64,10 @@
   <%#= javascript_include_tag  "all" %>
   <%#= yield_content :js %>
 
+  <script>
+    console.log('AUTO DEPLOYING WITH NETLIFY!!!');
+  </script>
+
   <%= partial "analytics" %>
 
 </body>
